# CloudHarvestPluginAzure

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  harvest.yaml  pyproject.toml
CloudHarvestPluginAzure/: __register__.py  credentials.py  exceptions.py  pyproject.toml
CloudHarvestPluginAzure/tasks/: __init__.py  azure.py
CloudHarvestPluginAzure/templates/reports/azure/: regions.yaml  resource_groups.yaml
CloudHarvestPluginAzure/templates/reports/azure/databases/: flexibleservers.yaml
CloudHarvestPluginAzure/templates/services/azure/databases/: flexibleservers.yaml
