[build-system]
requires = ["flit-core>=3.7"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "templates/**/*.yaml",
    "pyproject.toml",
]

[project]
authors = [ { name = "Cloud Harvest" } ]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Site Reliability Engineers",
]
dependencies = [
    "CloudHarvestCoreTasks @ git+https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git@0.9.0",
    "cmd2",
    "configparser",
    "Flask",
    "PyYAML",
    "flatten-json",
    "pexpect",
    "pymongo",
    "pytest",
    "requests",
    "rich",
    "rich-argparse",
    "setuptools",
    # Azure SDK packages
    # Unlike the AWS boto3 package, Azure's SDK is highly modular, so we must explicitly list each corresponding service
    # package here. Find the SDK list here: https://azure.github.io/azure-sdk/releases/latest/all/python.html
    "azure-identity",
    "azure-mgmt-subscription",
    "azure-mgmt-resource",
    "azure-mgmt-postgresqlflexibleservers"
]
description = "This is the Azure Plugin for CloudHarvest."
name = "CloudHarvestPluginAzure"
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.1"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/Cloud-Harvest/CloudHarvestPluginAzure"
