[build-system]
requires = ["flit-core>=3.7"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "templates/**/*.yaml",
    "pyproject.toml",
]

[project]
authors = [ { name = "Cloud Harvest" } ]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Site Reliability Engineers",
]
dependencies = [
    "CloudHarvestCoreTasks @ git+https://github.com/Cloud-Harvest/CloudHarvestCoreTasks.git@0.10.0",
    "cmd2",
    "configparser",
    "Flask",
    "PyYAML",
    "flatten-json",
    "pexpect",
    "pymongo",
    "pytest",
    "requests",
    "rich",
    "rich-argparse",
    "setuptools",
    "azure-identity",
    "azure-mgmt-subscription",
    "azure-mgmt-resourcegraph"
]
description = "This is the Azure Plugin for CloudHarvest."
name = "CloudHarvestPluginAzure"
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.1"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/Cloud-Harvest/CloudHarvestPluginAzure"
